--- a/ClientApp/src/App.css
+++ b/ClientApp/src/App.css
@@ -31,3 +31,11 @@
     transform: rotate(360deg);
   }
 }
+
+.main-container {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 100px; /* height of your footer */
+ }
