from office new ai panel

--- a/ClientApp/src/index.css
+++ b/ClientApp/src/index.css
@@ -12,3 +12,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.label{
+  font-size: 13px;
+  font-style: italic;
+  padding: 0px;
+  margin: 0px;
+}
+
+/* Label content */
+.labelC{
+  font-size: 15px;
+  color: royalblue;
+  padding: 0px;
+  margin: 0px;
+}
