--- a/ClientApp/src/components/Css/NavBar.css
+++ b/ClientApp/src/components/Css/NavBar.css
@@ -8,3 +8,51 @@
     font-weight: 700;
   }
 
+  .navbar {
+    background-color: transparent !important;
+  }
+  
+  .navbar h3{
+    text-indent: -9999px;
+  }
+  
+  .navbar-nav .nav-link {
+      padding-right: 0;
+      padding-left: 0;
+      font-size: 1.388em;
+  }
+  
+  .navbar-nav .nav-link {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+  }
+  
+  
+  .navbar-nav .nav-link:hover {
+    color: #000;
+  }
+  
+  
+  .navbar-nav .nav-link:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #fdfdfd;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
+  
+  .navbar-nav .nav-link:hover:before,
+  .navbar-nav .nav-link.active:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+
