--- a/ClientApp/src/index.css
+++ b/ClientApp/src/index.css
@@ -1,11 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #242b48; /* Old browsers */
+  background: -moz-linear-gradient(top,  #242b48 0%, #363a64 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #242b48 0%,#363a64 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #242b48 0%,#363a64 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#242b48', endColorstr='#363a64',GradientType=0 ); /* IE6-9 */
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
 }
 
 code {
@@ -27,5 +29,44 @@ code {
   padding: 0px;
   margin: 0px;
 }
+
+.card{
+  border: 0px !important;
+  width: 100%;
+}
+
+.card-body{
+  background-color: #2e3552;
+  color: aliceblue;
+}
+
+.card-header{
+  background-color: #2e3552 !important;
+  color: aliceblue;
+}
+
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {  
+ 
+}
+ 
+/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
+@media (min-width: 768px) {  
+
+}
+ 
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+  .navbar-nav .nav-link {
+    text-align: center;
+  }
+}
+ 
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  
+    
+}
+
 
 
